@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = 1.7 gnu
 SUBDIRS = . doc lightning opcode tests
 EXTRA_DIST = config/texi2dvi config/help2man
 
-noinst_HEADERS = lightning.h
+include_HEADERS = lightning.h
 
 aclocaldir = $(datadir)/aclocal
 dist_aclocal_DATA = lightning.m4
